# chinese_speechRecognize

./: .gitignore  AUTHORS  INSTALL  Makefile.am  clean_auto_files.sh  configure.ac  run_test.sh
common/: StringHelper.h
ekho-data/: symbol_array.txt
include/: ekho.h
lib/: ekho.cpp
sample/: ekho_cmd.cpp
src/: base_engine.h  ekho.cpp  ekho.h  ekho_dict.cpp  ekho_dict.h  ekho_typedef.h  ekho_utils.cpp  ekho_utils.h  libekho_impl.cpp  libsndfilexx.cpp  libsndfilexx.h  phonetic_symbol.h  sndfilexx.h  symbol_array.cpp  test_ekho.cpp  zh_symbol_map.cpp  zhy_symbol_map.cpp
